<resources>
    <string name="app_name">Champlain Trivia</string>
    <string name="quiz_selection_prompt">choose a quiz, any quiz</string>
    <string name="history">History</string>
    <string name="buildings">Buildings</string>
    <string name="faculty">Faculty</string>
    <string name="next_button">Next ❯</string>
    <string name="submit_button">Submit ✓</string>
    <string name="tmp_answer">answer</string>
    <string name="tmp_question">question</string>
    <string name="hint">HINT</string>
    <string name="score_prompt">SCORE</string>
    <string name="get_name">give us a name for the scoreboard</string>
    <string name="top_scores">Top Scores</string>
    <string name="records">RECORDS</string>
    <string name="home">HOME</string>
    <string name="num_questions">10</string>
    <string name="name_score_delimiter">-</string>
    <string name="username">username</string>
    <string name="q5_prompt">5.</string>
    <string name="q4_prompt">4.</string>
    <string name="q3_prompt">3.</string>
    <string name="q2_prompt">2.</string>
    <string name="q1_prompt">1.</string>
</resources>
