<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


    <TextView
        android:id="@+id/selection_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        android:text="@string/quiz_selection_prompt" />

    <Button
        android:id="@+id/quiz0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:background="#236192"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:text="@string/history"
        android:textColor="#fff"
        android:textSize="28sp" />

    <Button
        android:id="@+id/quiz1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:background="#236192"
        android:textColor="#fff"
        android:textSize="28sp"
        android:text="@string/buildings" />

    <Button
        android:id="@+id/quiz2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:background="#236192"
        android:textColor="#fff"
        android:textSize="28sp"
        android:text="@string/faculty" />

</LinearLayout>