<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tmp_question"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/answer0"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="#236192"
            android:textColor="#fff"
            android:layout_margin="10dp"
            android:text="@string/tmp_answer" />

        <Button
            android:id="@+id/answer1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="#236192"
            android:textColor="#fff"
            android:layout_margin="10dp"
            android:text="@string/tmp_answer" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/answer2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="#236192"
            android:textColor="#fff"
            android:layout_margin="10dp"
            android:text="@string/tmp_answer" />

        <Button
            android:id="@+id/answer3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="#236192"
            android:textColor="#fff"
            android:layout_margin="10dp"
            android:text="@string/tmp_answer" />

    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00a9e0"
        android:textColor="#fff"
        android:visibility="gone"
        android:text="@string/next_button"/>

</LinearLayout>